# stepik_cpp

./: .gitignore  LICENSE  README.md  add_bin_to_src  build_all  build_one  clean  env  has_new_deps  list_deps  list_src_bin  list_test_src_bin  meson.build  test
01_variables/: ceil_div.cpp  char2int.cpp  float_presicion.cpp  mod.cpp  sum.cpp
02_control/: bool_sum.cpp  do_loop.cpp
03_arrays/: buble_sort.cpp  check_sorted.cpp  chess_board.cpp  knight_moves.cpp  monthly_profit.cpp  queen_moves.cpp
04_structs/: bad_sort.cpp  my_time.hpp  ten_pointers.cpp
05_bits/: digits.hpp  digits.test.cpp  digits_demo.cpp  parse_int.test.cpp  parse_int_demo.cpp
sh/: add_bin_to_src  build_all  build_one  has_new_deps  list_deps  list_src  list_src_bin  list_test_src_bin  select_compiler  test
